--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,7 @@
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-project-message": "^9.2",
         "drupal/core-recommended": "^9.2",
-        "islandora/islandora_install_profile_demo": "dev-main"
+        "islandora/islandora_install_profile_demo": "dev-demo_updates"
     },
     "require-dev": {
         "drupal/twig_xdebug": "^1.2"
