--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         },
         {
             "type": "git",
-            "url": "https://github.com/Islandora-Devops/islandora_install_profile_demo.git",
+            "url": "https://github.com/rosiel/islandora_install_profile_demo.git",
 	    "no-api": true
         },
         {
@@ -80,7 +80,7 @@
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-project-message": "^9.2",
         "drupal/core-recommended": "^9.2",
-        "islandora/islandora_install_profile_demo": "dev-main",
+        "islandora/islandora_install_profile_demo": "2052-resource-type-dev",
         "library/pdf.js": "2.4.456",
         "symfony/string": "^5.4"
     },
